# poll

./: .gitignore  Makefile  Pipfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  env.tmpl  main.py  nginx.conf  package-lock.json  project_structure.txt  pyproject.toml  requirements.txt
_configs/: Dockerfile  DockerfileUI
core/: config.py  jwt.py
db/: base.py  base_class.py  session.py
media/: UserLogin.vue
migrations/versions/: 0761aa111757_add_table_response_add_uuid_field_in_.py  3e90301f06e3_added_role_field_to_user_model.py  90bef4fde864_remove_unique_in_title_poll_and_in_type_.py  c753652d26b6_create_initial_tables.py  e9cad6d81fcb_add_uuid_field_to_poll_model.py
pgadmin/: pgadmin4.db
pgadmin/sessions/: 99e71368-a71c-4b95-8b6a-14c19edb3c4c
pgdata/: postmaster.pid  project_structure.txt
pgdata/base/13395/: 1247  1249  1259  16384  16387  16389  16391  16398  16400  16401  16402  16403  16405  (+60 more)
pgdata/global/: pg_control  pg_internal.init
pgdata/pg_stat/: db_0.stat  db_13395.stat  global.stat  pg_stat_statements.stat
pgdata/pg_xact/: 0000
src/: api_fastapi.py  main.py  new_main.py  new_start.sh  populate_db.py  prestart.sh  start.sh  utils.py
src/EventLog/: schemas.py
src/api/: routers.py
src/base/: schemas.py  service.py
src/company/: models.py  scheduler.py  schemas.py  service.py
src/core/: config.py  exceptions.py  jwt.py  local_config.py  security.py
src/db/: base.py
src/migrations/: env.py
src/poll/: models.py  scheduler.py  schemas.py  service.py  session_data.py
src/user/: models.py  schemas.py  service.py
traefik/: dynamic_conf.yaml  traefik.dev.toml  traefik.toml
(+39 files in other folders)
