[tool.poetry]
name = "poll"
version = "0.1.0"
description = ""
authors = ["Aleksey Maryaskin <maryaskin.a.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.101.0"
uvicorn = "0.23.2"
alembic = "1.11.2"
psycopg2-binary = "2.9.7"
bcrypt = "4.0.1"
fastapi-jwt-auth = "0.5.0"
emails = "0.6"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
environs = "^9.5.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-settings = "^2.0.2"
apscheduler = "^3.10.4"
pyhumps = "^3.8.0"
loguru = "^0.7.2"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
